AC_INIT([gcanaveral], [0.1.0], [tbollmeier@web.de])

AM_INIT_AUTOMAKE([1.11])
AM_SILENT_RULES([yes])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([
Makefile
src/Makefile
ui/Makefile
])
